OSSRH Maven Changes (#7)
* build: CI/CD pipeline with gh actions and circleci

* dependencies: set Spring Boot to 2.6.1, Spring Data Redis to 2.6.0

* build: OSSRH deploy changes