@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.redis.om</groupId>
@@ -11,7 +9,43 @@
   <packaging>jar</packaging>
 
   <name>redis-om-spring</name>
-  <url>https://developer.redis.com</url>
+  <description>Redis OM Spring provides powerful repository and custom object-mapping abstractions built on top of the powerful Spring Data Redis (SDR) framework.</description>
+  <url>https://github.com/redis/redis-om-spring</url>
+
+  <organization>
+    <name>Redis</name>
+    <url>www.redis.com</url>
+  </organization>
+  <issueManagement>
+    <url>https://github.com/redis/redis-om-spring/issues</url>
+    <system>Github</system>
+  </issueManagement>
+  <scm>
+    <url>https://github.com/redis/redis-om-spring</url>
+    <connection>scm:git:git://github.com/redis/redis-om-spring.git</connection>
+    <developerConnection>scm:git:ssh://github.com:redis/redis-om-spring.git</developerConnection>
+  </scm>
+
+  <licenses>
+    <license>
+      <name>BSD 3-Clause license</name>
+      <url>https://opensource.org/licenses/BSD-3-Clause</url>
+    </license>
+  </licenses>
+
+  <developers>
+    <developer>
+      <id>bsbodden</id>
+      <name>Brian Sam-Bodden</name>
+      <email>bsb at redis.com</email>
+      <organization>Redis</organization>
+      <organizationUrl>https://www.redis.com</organizationUrl>
+      <roles>
+        <role>Developer</role>
+      </roles>
+      <timezone>America/Phoenix</timezone>
+    </developer>
+  </developers>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -27,6 +61,7 @@
     <jredisearch.version>2.2.0-SNAPSHOT</jredisearch.version>
     <jredisbloom.version>2.2.0-SNAPSHOT</jredisbloom.version>
     <cdi>1.0</cdi>
+    <testcontainers.redis.version>1.4.6</testcontainers.redis.version>
   </properties>
 
   <dependencyManagement>
@@ -118,7 +153,7 @@
       <scope>provided</scope>
       <optional>true</optional>
     </dependency>
-
+    <!-- test dependencies -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
@@ -151,28 +186,136 @@
     <dependency>
       <groupId>com.redis.testcontainers</groupId>
       <artifactId>testcontainers-redis</artifactId>
-      <version>1.3.3</version>
+      <version>${testcontainers.redis.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.redis.testcontainers</groupId>
-      <artifactId>junit-jupiter</artifactId>
-      <version>1.15.3</version>
+      <artifactId>testcontainers-redis-junit-jupiter</artifactId>
+      <version>${testcontainers.redis.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
 
-  <developers>
-    <developer>
-      <id>bsbodden</id>
-      <name>Brian Sam-Bodden</name>
-      <email>bsb at redis.com</email>
-      <organization>RedisLabs</organization>
-      <organizationUrl>https://www.redis.com</organizationUrl>
-      <roles>
-        <role>Developer</role>
-      </roles>
-      <timezone>America/Phoenix</timezone>
-    </developer>
-  </developers>
+  <distributionManagement>
+    <snapshotRepository>
+      <id>ossrh</id>
+      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>cobertura-maven-plugin</artifactId>
+        <version>2.7</version>
+        <configuration>
+          <formats>
+            <format>html</format>
+            <format>xml</format>
+          </formats>
+          <check />
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <source>${maven.compiler.source}</source>
+          <target>${maven.compiler.target}</target>
+          <encoding>${project.build.sourceEncoding}</encoding>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.sonatype.plugins</groupId>
+        <artifactId>nexus-staging-maven-plugin</artifactId>
+        <version>1.6.8</version>
+        <extensions>true</extensions>
+        <configuration>
+          <serverId>ossrh</serverId>
+          <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
+          <autoReleaseAfterClose>true</autoReleaseAfterClose>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M5</version>
+        <configuration>
+            <argLine>
+                --illegal-access=permit
+            </argLine>
+        </configuration>
+    </plugin>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>3.0.0-M5</version>
+        <configuration>
+            <argLine>
+                --illegal-access=permit
+            </argLine>
+        </configuration>
+    </plugin>
+    </plugins>
+  </build>
+  <profiles>
+    <profile>
+      <id>release</id>
+      <build>
+        <plugins>
+          <!--Include sources and docs -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-source-plugin</artifactId>
+            <version>3.2.1</version>
+            <executions>
+              <execution>
+                <id>attach-sources</id>
+                <goals>
+                  <goal>jar-no-fork</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <version>3.3.1</version>
+            <executions>
+              <execution>
+                <id>attach-javadocs</id>
+                <goals>
+                  <goal>jar</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+
+          <!--Sign the components - this is required by maven central for releases -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <version>3.0.1</version>
+            <configuration>
+              <gpgArguments>
+                <arg>--pinentry-mode</arg>
+                <arg>loopback</arg>
+              </gpgArguments>
+            </configuration>
+            <executions>
+              <execution>
+                <id>sign-artifacts</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>sign</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
